<resources>
    <string name="app_name">GoTo</string>
    <string name="action_settings">Settings</string>
    <string name="enterPersonalInfo">Please enter personal information</string>
    <string name="name">Name</string>
    <string name="lastName">Surame</string>
    <string name="address">Address</string>
    <string name="title_activity_bus_station">Bus Station</string>
    <string name="chooseStation">GO TO ... </string>
    
    <string-array name="stations">
        <item>Vjecnica</item>
        <item>Bascarsija	</item>
        <item>Katedrala		</item>
        <item>Narodna Banka	</item>
        <item>Predsjednistvo</item>
        <item>Marijin Dvor				</item>
        <item>Tehnicka Skola				</item>
        <item>Univerzitet-Kasarna				</item>
        <item>Pofalici				</item>
        <item>Socijalno				</item>
        <item>Dolac Malta				</item>
        <item>Vjetrenjaca				</item>
        <item>Otoka				</item>
        <item>Gras				</item>
        <item>RTV BiH				</item>
        <item>Alipasin Most				</item>
        <item>Nedzarici				</item>
        <item>Vojnicko Polje				</item>
        <item>  Mojmilo				</item>
        <item>Dobrinja V				</item>
        <item>Dobrinja III				</item>
        <item>Dobrinja II				</item>
        <item>Dobrinja okretaljka				</item>
        <item>Stup				</item>
        <item>Ilidza              </item>
    </string-array>
    <string name="title_activity_list">list</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list_destinations">listDestinations</string>
    <string name="title_activity_arrival_list">ArrivalListActivity</string>

    // for Settings
    <string name="luggage">Luggage</string>
    <string name="fellowTravelers">Fellow traveler(s)</string>
    <string name="numberOfFellowTravelers">Number of fellow travelers: </string>
    <string name="pets">Pet(s)</string>
    <string name="disabled">Disabled</string>
    <string name="walkingSpeed">Walking speed: </string>
    <string name="driversGender">Drivers gender: </string>
    <string name="radio_justBefore">Just before my stop</string>
    <string name="radio_shortlyBefore">Shortly before my stop</string>
    <string name="radio_aFewMins">A few mins before my stop</string>
    <string name="radio_bosanski">Bosanski</string>
    <string name="radio_english">English</string>

    <string name="fellows_prompt">Choose</string>
    <string-array name="fellows">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_passenger_details">Passenger details</string>
    <string name="title_activity_favorite_locations">Favorite locations</string>
    <string name="title_activity_settings_alerts">Alerts</string>
    <string name="title_activity_settings_application">Application</string>
    <string name="title_activity_settings_alerts_alert_me">Alert me</string>
    <string name="title_activity_settings_application_language">Language</string>
    <string name="title_activity_settings_application_about">About</string>
    <string name="title_activity_settings_personal_details">Personal details</string>
    <string name="title_activity_vehicle_details">VehicleDetails</string>

    //for transport lines and transport modes
    <string name="TransportList">Transport</string>

    <string-array name="bus">
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>107</item>
        <item>108</item>
    </string-array>

    <string-array name="minibus">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="taxi">
        <item>Sarajevo</item>
        <item>Kajle</item>
        <item>Crveni</item>
    </string-array>

    <string-array name="tram">
        <item>1 Željeznička Stanica – Baščaršija</item>
        <item>2 Čengić Vila – Baščaršija</item>
        <item>3 Ilidža – Baščaršija</item>
        <item>4 Ilidža – Željeznička stanica</item>
        <item>5 Nedžarići – Baščaršija</item>
        <item>6 Ilidža – Skenderija</item>
    </string-array>

    <string-array name="trolleybus">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
