<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ba.tba.class1.SettingsPassengerDetails">

    <CheckBox
        android:text="@string/luggage"
        android:id="@+id/luggage"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:text="@string/disabled"
        android:id="@+id/disabled"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:text="@string/pets"
        android:id="@+id/pets"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:text="@string/fellowTravelers"
        android:id="@+id/travelers"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
        <TextView
            android:text="@string/numberOfFellowTravelers"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_weight="2"
            android:entries="@array/fellows"
            android:prompt="@string/fellows_prompt"
            android:id="@+id/spinnerNoTravelers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
        <TextView
            android:layout_weight="1"
            android:text="@string/walkingSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Switch
            android:layout_weight="3"
            android:id="@+id/walkingSpeed"
            android:textOn="Fast"
            android:textOff="Slow"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
        <TextView
            android:layout_weight="1"
            android:text="@string/driversGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Switch
            android:layout_weight="3"
            android:id="@+id/gender"
            android:textOn="Male"
            android:textOff="Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
    </LinearLayout>
</LinearLayout>